fix unexpected right margin on mobile screens

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -6,8 +6,11 @@
   --text-color: #eee;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
-  overflow-x: hidden;
   color: var(--text-color);
   background-color: var(--primary-color);
 }
